# inkstone-md

./: .gitignore  CLAUDE.md  README.md  README_EN.md  index.html  package-lock.json  package.json  tsconfig.json
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/types/: markdown-it-footnote.d.ts  markdown-it-task-lists.d.ts
