[package]
name = "inkstone-md"
version = "0.1.0"
description = "A lightweight Markdown editor"
authors = ["you"]
edition = "2021"

[lib]
name = "inkstone_md_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
